# ResNet

./: pyproject.toml
src/: main.py
src/resnet/: module.py
