[project]
name = "resnet"
version = "0.1.0"
description = "Resnet"
authors = [
    {name = "heonjin"},
]
dependencies = [
    "torch>=2.4.1",
    "torchvision>=0.19.1",
    "rich>=13.8.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
